--- a/views/client/pages/rooms/detail.pug
+++ b/views/client/pages/rooms/detail.pug
@@ -24,7 +24,7 @@ block main
               each feature in room.features
                 span.badge.rounded-pill.bg-light.text-dark.text-wrap.me-1.mb-1 #{feature.title}
             .mb-3
-              h6.mb-1 Tiện nghi
+              h6.mb-1 Cơ sở vật chất
               each facility in room.facilities
                 span.badge.rounded-pill.bg-light.text-dark.text-wrap.me-1.mb-1 #{facility.title}
             .mb-3
