--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,6 +1,6 @@
 nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-sm sticky-top")
   div(class="container-fluid")
-    a(class="navbar-brand me-5 fw-bold fs-3 h-font" href="<?=_WEB_HOST?>/khach/index") Khách sạn
+    a(class="navbar-brand me-5 fw-bold fs-3 h-font" href="/") Khách sạn
     button(
       class="navbar-toggler shadow-none"
       aria-label="Toggle navigation" 
@@ -12,29 +12,29 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
     )
       span(class="navbar-toggler-icon")
     div(class="collapse navbar-collapse" id="navbarSupportedContent")
-    ul(class="navbar-nav me-auto mb-2 mb-lg-0")
-      li(class="nav-item")
-        a(
-          class="nav-link me-2"
-          href="/" 
-          aria-current="page"
-        )| Trang chủ
-      li(class="nav-item")
-        a(class="nav-link me-2"  href="/rooms") Phòng
-      li(class="nav-item")
-        a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/facilities") Dịch vụ
-      li(class="nav-item")
-        a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/Contact") Liên hệ
-    div(class="d-flex")
-      button(
-        class="btn btn-outline-dark shadow-none me-lg-3 me-2"
-        data-bs-target="#loginModal" 
-        data-bs-toggle="modal" 
-        type="button"
-      ) Login
-      button(
-        class="btn btn-outline-dark shadow-none"
-        data-bs-target="#registerModal" 
-        data-bs-toggle="modal" 
-        type="button"
-      ) Register
+      ul(class="navbar-nav me-auto mb-2 mb-lg-0")
+        li(class="nav-item")
+          a(
+            class="nav-link me-2"
+            href="/" 
+            aria-current="page"
+          )| Trang chủ
+        li(class="nav-item")
+          a(class="nav-link me-2"  href="/rooms") Phòng
+        li(class="nav-item")
+          a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/facilities") Dịch vụ
+        li(class="nav-item")
+          a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/Contact") Liên hệ
+      div(class="d-flex")
+        button(
+          class="btn btn-outline-dark shadow-none me-lg-3 me-2"
+          data-bs-target="#loginModal" 
+          data-bs-toggle="modal" 
+          type="button"
+        ) Login
+        button(
+          class="btn btn-outline-dark shadow-none"
+          data-bs-target="#registerModal" 
+          data-bs-toggle="modal" 
+          type="button"
+        ) Register
