Trang cơ sở vật chất

--- a/views/client/pages/rooms/detail.pug
+++ b/views/client/pages/rooms/detail.pug
@@ -58,6 +58,6 @@ block main
       .col-12.mt-4.px4
         .mb-5
           h5 Description
-          p #{room.description}
+          p !{room.description}
 
   script(src="/js/room.js")
