--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -22,9 +22,9 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
         li(class="nav-item")
           a(class="nav-link me-2"  href="/rooms") Phòng
         li(class="nav-item")
-          a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/facilities") Dịch vụ
+          a(class="nav-link me-2" href="/facilities") Dịch vụ
         li(class="nav-item")
-          a(class="nav-link me-2" href="<?=_WEB_HOST?>/khach/Contact") Liên hệ
+          a(class="nav-link me-2" href="Contact") Liên hệ
       div(class="d-flex")
         button(
           class="btn btn-outline-dark shadow-none me-lg-3 me-2"
