--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -26,15 +26,11 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
         li(class="nav-item")
           a(class="nav-link me-2" href="Contact") Liên hệ
       div(class="d-flex")
-        button(
+        a(
           class="btn btn-outline-dark shadow-none me-lg-3 me-2"
-          data-bs-target="#loginModal" 
-          data-bs-toggle="modal" 
-          type="button"
+          href="/user/login"
         ) Login
-        button(
+        a(
           class="btn btn-outline-dark shadow-none"
-          data-bs-target="#registerModal" 
-          data-bs-toggle="modal" 
-          type="button"
+          href="/user/register"
         ) Register
