--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -26,11 +26,32 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
         li(class="nav-item")
           a(class="nav-link me-2" href="Contact") Liên hệ
       div(class="d-flex")
-        a(
-          class="btn btn-outline-dark shadow-none me-lg-3 me-2"
-          href="/user/login"
-        ) Login
-        a(
-          class="btn btn-outline-dark shadow-none"
-          href="/user/register"
-        ) Register
+        if(user)
+          .btn-group
+            button.btn.btn-outline-dark.dropdown-toggle(
+              aria-expanded="false" 
+              data-bs-display="static" 
+              data-bs-toggle="dropdown" 
+              type="button"
+              )
+              img.me-1(
+                style="width: 25px; height: 25px;" 
+                src="/"
+                ) 
+              | #{user.fullName}
+            ul.dropdown-menu.dropdown-menu-lg-end
+              li
+                a.dropdown-item(href="profile.php") Profile
+              li
+                a.dropdown-item(href="bookings.php") Bookings
+              li
+                a.dropdown-item(href="/user/logout") Logout
+        else 
+          a(
+            class="btn btn-outline-dark shadow-none me-lg-3 me-2"
+            href="/user/login"
+          ) Login
+          a(
+            class="btn btn-outline-dark shadow-none"
+            href="/user/register"
+          ) Register
