--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -21,3 +21,5 @@
       if(role.permissions.includes("accounts_view"))
         li
           a(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
+      li
+        a(href=`${prefixAdmin}/users`) Quản lí người dùng
