--- a/views/admin/pages/users/index.pug
+++ b/views/admin/pages/users/index.pug
@@ -61,5 +61,5 @@ block main
     action=""
     method="POST"
     id="form-delete-item"
-    data-path=`${prefixAdmin}/accounts/delete`
+    data-path=`${prefixAdmin}/users/delete`
   )
