--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -23,3 +23,6 @@
           a(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
       li
         a(href=`${prefixAdmin}/users`) Quản lí người dùng
+      li
+        a(href=`${prefixAdmin}/voucher`) Voucher
+
