--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -24,5 +24,5 @@
       li
         a(href=`${prefixAdmin}/users`) Quản lí người dùng
       li
-        a(href=`${prefixAdmin}/voucher`) Voucher
+        a(href=`${prefixAdmin}/vouchers`) Voucher
 
