4. Chỉnh sửa voucher

--- a/views/admin/pages/rooms/edit.pug
+++ b/views/admin/pages/rooms/edit.pug
@@ -11,7 +11,7 @@ block main
 
     form(
       action=`${prefixAdmin}/rooms/edit/${room.id}?_method=PATCH`
-      id="form-create-room"
+      id="form-edit-room"
       method="POST"
       enctype="multipart/form-data"
     )
