--- a/views/admin/pages/vouchers/edit.pug
+++ b/views/admin/pages/vouchers/edit.pug
@@ -3,11 +3,12 @@ include ../../mixins/alert.pug
 
 block main 
   +alert-error(5000)
+  +alert-success(5000)
 
-  h1(class="mb-4") Thêm mới voucher
+  h1(class="mb-4") Chỉnh sửa voucher
   form(
-    action=`${prefixAdmin}/vouchers/create`
-    id="form-create-voucher"
+    action=`${prefixAdmin}/vouchers/edit/${voucher.id}?_method=PATCH`
+    id="form-edit-voucher"
     method="POST"
     enctype="application/x-www-form-urlencoded"
   )
@@ -18,6 +19,7 @@ block main
         class="form-control"
         id="code"
         name="code"
+        value=voucher.code
         required
       )
     div(class="form-group")
@@ -26,11 +28,10 @@ block main
         type="number"
         class="form-control"
         id="discountValue"
-        name="discountValue"
         max="100"
+        name="discountValue"
         required
-        value="0"
-        min="0"
+        value=voucher.discountValue
       )
     div(class="form-group")
       label(for="expirationDate") Ngày hết hạn:
@@ -38,7 +39,8 @@ block main
         type="date" 
         class="form-control"
         id="expirationDate" 
-        name="expirationDate" 
+        name="expirationDate"
+        value=`${new Date(voucher.expirationDate).toISOString().slice(0, 10)}` 
         required
       )
     div(class="form-group")
@@ -48,7 +50,7 @@ block main
         id="usageLimit" 
         class="form-control"
         name="usageLimit" 
-        value="1"
+        value=voucher.usageLimit
       )
     div(class="form-group form-check form-check-inline")
       input(
@@ -57,7 +59,7 @@ block main
         id="statusActive"
         name="status"
         value="active"
-        checked
+        checked=(voucher.status == "active" ? true : false)
       )
       label(for="statusActive" class="form-check-label") Hoạt động
     div(class="form-group form-check form-check-inline")
@@ -67,6 +69,7 @@ block main
         id="statusInActive"
         name="status"
         value="inactive"
+        checked=(voucher.status == "inactive" ? true : false)
       )
       label(for="statusInActive" class="form-check-label") Dừng hoạt động
 
@@ -74,5 +77,7 @@ block main
       button(
         type="submit"
         class="btn btn-primary"
-      ) Tạo mới
+      ) Cập nhật
     
+
+
