--- a/views/client/pages/rooms/detail.pug
+++ b/views/client/pages/rooms/detail.pug
@@ -33,7 +33,7 @@ block main
               span.badge.bg-light.text-dark.text-wrap #{room.children} trẻ em
             a(
               class="btn w-100 text-white custom-bg shadow-none mb-1"
-              href=`rooms/book_now/${room.id}`
+              href=`/rooms/book_now/${room.id}`
             ) Đặt ngay
       
       .div(class="col-lg-7 col-md-12 px-4")
