--- a/views/admin/pages/accounts/index.pug
+++ b/views/admin/pages/accounts/index.pug
@@ -13,7 +13,7 @@ block main
         .col-4.text-right
           a(
             href=`${prefixAdmin}/accounts/create`
-            class="btn btn-outline-success"
+            class="btn btn-outline-success mb-3"
           ) + Thêm mới
       table(
         class="table table-hover table-sm"
@@ -45,14 +45,18 @@ block main
                 if (item.status === "active")
                   a(
                     href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status 
                     class="badge badge-success"
-                    data-status="active"
                   ) Hoạt động
                 else
                   a(
                     href="javascript:;"
+                    data-status=item.status
+                    data-id=item.id
+                    button-change-status 
                     class="badge badge-danger"
-                    data-status="inactive"
                   ) Dừng hoạt động
               td
                 a(
@@ -75,5 +79,7 @@ block main
     id="form-delete-item"
     data-path=`${prefixAdmin}/accounts/delete`
   )
+
+  script(src="/admin/js/account.js")
 
   
