4. Thay đổi trạng thái sản phẩm ở quản lí voucher

--- a/views/admin/pages/vouchers/index.pug
+++ b/views/admin/pages/vouchers/index.pug
@@ -95,6 +95,6 @@ block main
     data-path=`${prefixAdmin}/accounts/delete`
   )
 
-    //- script(src="/admin/js/room.js")
+    script(src="/admin/js/voucher.js")
 
 
