--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -24,7 +24,7 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
         li(class="nav-item")
           a(class="nav-link me-2" href="/facilities") Dịch vụ
         li(class="nav-item")
-          a(class="nav-link me-2" href="Contact") Liên hệ
+          a(class="nav-link me-2" href="/contact") Liên hệ
       div(class="d-flex")
         if(user)
           .btn-group
