--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -25,6 +25,7 @@ block main
     .row
       .col-lg-12.bg-white.shadow.p-4.rounded
         h5.mb-4 Check Booking Availability
+        +alert-error(5000)
         form
           .row.align-items-end
             .col-lg-3.mb-3
