--- a/views/client/pages/rooms/book_now.pug
+++ b/views/client/pages/rooms/book_now.pug
@@ -101,7 +101,8 @@ block main
                   span#total_price 0 VND
                   input(type="hidden" name="total_price" id="total_price_input")
                   input(type="hidden" name="room_id" id="room_id" value=room.id)
-                  input(type="hidden" name="user_id" id="user_id" value=user.id)
+                  if(user)
+                    input(type="hidden" name="user_id" id="user_id" value=user.id)
                   button.btn.w-100.text-white.custom-bg.shadow-none.mb-1.mt-1(name="pay_now") Thanh toán ngay
 
       .col-lg-7.col-md-12.px-4
