--- a/views/client/pages/rooms/book_now.pug
+++ b/views/client/pages/rooms/book_now.pug
@@ -1,10 +1,13 @@
 extends ../../layouts/default.pug
+include ../../mixins/alert.pug
+
 
 block main 
   .container
     .row
       .col-12.my-5.mb-4.px-4
         h2.fw-bold Xác nhận đặt phòng
+        +alert-error(5000)
         div(style="font-size: 14px;")
           a.text-secondary.text-decoration-none(href="/") HOME
           span.text-secondary >
