4. Làm trang liên hệ (P4)

--- a/views/admin/pages/contact/index.pug
+++ b/views/admin/pages/contact/index.pug
@@ -42,6 +42,14 @@ block main
                   button-delete
                   data-id=item.id
                 ) Xóa
+      
+  form(
+    action=""
+    method="POST"
+    id="form-delete-item"
+    data-path=`${prefixAdmin}/contact/delete`
+  )
+    script(src="/admin/js/contact.js")
 
           
 
