1. Trang cài đặt chung (P1)

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -29,4 +29,6 @@
         a(href=`${prefixAdmin}/vouchers`) Voucher
       li
         a(href=`${prefixAdmin}/statistics`) Thống kê
+      li
+        a(href=`${prefixAdmin}/settings/general`) Cài đặt chung
 
