--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -18,15 +18,15 @@
       br
     .col-lg-4.p-4
       h5.mb-3 Theo dõi chúng tôi
-      a.d-inline-block.mb-3.text-dark.text-decoration-none(href="#")
+      a.d-inline-block.mb-3.text-dark.text-decoration-none(href=`${settingGeneral.twitter}`)
         i.bi.bi-twitter.me-1
         | Twitter
       br
-      a.d-inline-block.mb-3.text-dark.text-decoration-none(href="#")
+      a.d-inline-block.mb-3.text-dark.text-decoration-none(href=`${settingGeneral.facebook}`)
         i.bi.bi-facebook.me-1
         | Facebook
       br
-      a.d-inline-block.mb-3.text-dark.text-decoration-none(href="#")
+      a.d-inline-block.mb-3.text-dark.text-decoration-none(href=`${settingGeneral.instagram}`)
         i.bi.bi-instagram.me-1
         | Instagram
       br
