--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,6 +1,6 @@
 nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-sm sticky-top")
   div(class="container-fluid")
-    a(class="navbar-brand me-5 fw-bold fs-3 h-font" href="/") Khách sạn
+    a(class="navbar-brand me-5 fw-bold fs-3 h-font" href="/") #{settingGeneral.websiteName}
     button(
       class="navbar-toggler shadow-none"
       aria-label="Toggle navigation" 
@@ -41,13 +41,13 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
               li
                 a.dropdown-item(href="bookings.php") Bookings
               li
-                a.dropdown-item(href="/user/logout") Logout
+                a.dropdown-item(href="/user/logout") Đăng xuất
         else 
           a(
             class="btn btn-outline-dark shadow-none me-lg-3 me-2"
             href="/user/login"
-          ) Login
+          ) Đăng nhập
           a(
             class="btn btn-outline-dark shadow-none"
             href="/user/register"
-          ) Register
+          ) Đăng kí
