--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -25,7 +25,7 @@ block main
   .container.availability-form
     .row
       .col-lg-12.bg-white.shadow.p-4.rounded
-        h5.mb-4 Check Booking Availability
+        h5.mb-4 Xem phòng có sẵn
         +alert-error(5000)
         form(
           id="form-filter-room" 
@@ -42,15 +42,15 @@ block main
             .col-lg-3.mb-3
               label.form-label(style="font-weight: 500;") Adult
               select.form-select.shadow-none(name="adult")
-                option(value="1") One
-                option(value="2") Two
-                option(value="3") Three
+                option(value="1") 1
+                option(value="2") 2
+                option(value="3") 3
             .col-lg-2.mb-3
               label.form-label(style="font-weight: 500;") Children
               select.form-select.shadow-none(name="children")
-                option(value="1") One
-                option(value="2") Two
-                option(value="3") Three
+                option(value="1") 1
+                option(value="2") 2
+                option(value="3") 3
             .col-lg-1.mb-lg-3.mt-2
               button.btn.text-white.shadow-none.custom-bg(type="submit") Submit
   
