--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -1,20 +1,18 @@
 .container-fluid.bg-white.mt-5
   .row
     .col-lg-4.p-4
-      h3.h-font.fw-bold.fs-3.mb-2 Khách sạn
-      p
-        | Chúng tôi cam kết mang đến sự thoải mái và hài lòng tối đa với các phòng nghỉ tinh tế, tiện nghi cao
-        |   cấp như giường êm ái, TV màn hình phẳng, Internet tốc độ cao và phòng tắm hiện đại. Quý Khách còn có
-        |   thể tận hưởng hồ bơi, phòng gym, spa, nhà hàng ẩm thực phong phú và phòng hội nghị chuyên nghiệp.
+      h3.h-font.fw-bold.fs-3.mb-2 #{settingGeneral.websiteName}
+      p !{settingGeneral.introduction}
+        
     .col-lg-4.p-4
       h5.mb-3 Đường dẫn
-      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="#") Trang chủ
+      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="/") Trang chủ
       br
-      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="#") Phòng
+      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="/rooms") Phòng
       br
-      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="#") Dịch vụ
+      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="/facilities") Dịch vụ
       br
-      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="#") Liên hệ
+      a.d-inline-block.mb-2.text-dark.text-decoration-none(href="/contact") Liên hệ
       br
     .col-lg-4.p-4
       h5.mb-3 Theo dõi chúng tôi
