--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -40,13 +40,13 @@ block main
               label.form-label(style="font-weight: 500;") Check-out
               input.form-control.shadow-none(type="date" name="checkout")
             .col-lg-3.mb-3
-              label.form-label(style="font-weight: 500;") Adult
+              label.form-label(style="font-weight: 500;") Người lớn
               select.form-select.shadow-none(name="adult")
                 option(value="1") 1
                 option(value="2") 2
                 option(value="3") 3
             .col-lg-2.mb-3
-              label.form-label(style="font-weight: 500;") Children
+              label.form-label(style="font-weight: 500;") Trẻ em
               select.form-select.shadow-none(name="children")
                 option(value="1") 1
                 option(value="2") 2
