--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,4 +1,57 @@
 extends ../../layouts/default.pug
 
 block main
-    h1 #{pageTitle}
+  .row.mt-4
+    .col-12
+      .card.mb-4
+        .card-header Thông tin tài khoản
+        .card-body
+          if(user.avatar)
+            img(
+              src=user.avatar
+              style="height: 100px;margin-bottom: 15px;"
+            )
+          if(user.fullName)
+            p Họ tên: <b>#{user.fullName}</b>
+          if(user.email)
+            p Email: <b>#{user.email}</b>
+          if(user.phone)
+            p Số điện thoại: <b>#{user.phone}</b>
+          if(role.title)
+            p Phân quyền: <b>#{role.title}</b>
+    .col-6
+      .card.mb-4
+        .card-header Danh mục sản phẩm
+        .card-body
+          p Số lượng: <b>#{statistic.categoryRoom.total}</b>
+          p Hoạt động: <b>#{statistic.categoryRoom.active}</b>
+          p Dừng hoạt động: <b>#{statistic.categoryRoom.inactive}</b>
+    .col-6
+      .card.mb-4
+        .card-header Sản phẩm
+        .card-body
+          p Số lượng: <b>#{statistic.room.total}</b>
+          p Hoạt động: <b>#{statistic.room.active}</b>
+          p Dừng hoạt động: <b>#{statistic.room.inactive}</b>
+
+    .col-6
+      .card.mb-4
+        .card-header Tài khoản admin
+        .card-body
+          p Số lượng: <b>#{statistic.account.total}</b>
+          p Hoạt động: <b>#{statistic.account.active}</b>
+          p Dừng hoạt động: <b>#{statistic.account.inactive}</b>
+    .col-6
+      .card.mb-4
+        .card-header Tài khoản client
+        .card-body
+          p Số lượng: <b>#{statistic.user.total}</b>
+          p Hoạt động: <b>#{statistic.user.active}</b>
+          p Dừng hoạt động: <b>#{statistic.user.inactive}</b>
+    .col-6
+      .card.mb-4
+        .card-header Cơ sở vật chất
+        .card-body
+          p Số lượng: <b>#{statistic.facility.total}</b>
+          p Hoạt động: <b>#{statistic.facility.active}</b>
+          p Dừng hoạt động: <b>#{statistic.facility.inactive}</b>
