--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -39,7 +39,7 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
               li
                 a.dropdown-item(href="profile.php") Profile
               li
-                a.dropdown-item(href="bookings.php") Bookings
+                a.dropdown-item(href="/user/bookings") Phòng đã đặt
               li
                 a.dropdown-item(href="/user/logout") Đăng xuất
         else 
