--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -37,7 +37,7 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
               span #{user.fullName}
             ul.dropdown-menu.dropdown-menu-lg-end
               li
-                a.dropdown-item(href="profile.php") Profile
+                a.dropdown-item(href="/user/profile") Hồ sơ 
               li
                 a.dropdown-item(href="/user/bookings") Phòng đã đặt
               li
